# Health_Rust

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml
docs/: local-postgres.md
migrations/: 202604180001_init_core_schema.down.sql  202604180001_init_core_schema.up.sql  202604180002_seed_core_data.down.sql  202604180002_seed_core_data.up.sql
scripts/: init-db.ps1  seed-linhnguyen-from-frontend.sql
src/: app.rs  main.rs
src/config/: mod.rs
src/docs/: mod.rs
src/dto/: auth.rs  column.rs  mod.rs  my_record.rs  top.rs
src/errors/: mod.rs
src/handlers/: mod.rs
src/repositories/: auth.rs  column.rs  mod.rs  my_record.rs  top.rs
src/routes/: mod.rs
src/services/: auth.rs  column.rs  mod.rs  my_record.rs  top.rs
